--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;700;800&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;700;800&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;1,100&display=swap');
 
 :root {
   --primary-color: #3282B8;
@@ -13,13 +14,14 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Manrope', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .navbar {
   position: fixed;
   width: 100%;
-  background-color: var(--primary-color-dark);
+  /*background-color: var(--primary-color-dark);*/
+  background-color: #748DA6 ;
   z-index: 1;
 }
 
@@ -41,6 +43,7 @@ body {
 .menu-item a:hover {
   background-color: var(--accent-color);
   color: var(--primary-color-dark);
+  border-radius: 100%;
 }
 
 .menu-item a {
@@ -199,7 +202,8 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  background-color: var(--primary-color-dark);
+  /*background-color: var(--primary-color-dark);*/
+  background-color: #11468F ;
   color: var(--accent-color);
   padding: 20px;
 }
