--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,17 @@
-/*@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;700;800&display=swap');*/
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;1,100&display=swap');
+/*Se cambio el modo en que busca las tipocgrafias*/
+/*@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital@1&family=Roboto:ital@1&family=STIX+Two+Text:ital@1&display=swap');*/
+@font-face {
+  font-family: "Fira Sans";
+  src: url("fonts/FiraSans-Italic.ttf");
+}
+@font-face {
+  font-family: "Roboto";
+  src: url("fonts/Roboto-Italic.ttf") format("truetype");
+}
+@font-face {
+  font-family: "STIX Two Text";
+  src: url("fonts/STIXTwoText-Italic-VariableFont_wght.ttf") format("truetype");
+}
 
 :root {
   --primary-color: #3282B8;
@@ -24,6 +36,7 @@ body {
   width: 100%;
   background-color: var(--color-opcional-1);
   z-index: 1;
+  font-family: 'Fira Sans', sans-serif;
 }
 
 .menu {
@@ -205,7 +218,7 @@ footer {
   justify-content: flex-end;
   background-color: var(--color-opcional-2);
   color: var(--accent-color);
-  padding: 20px;
+  padding: 20px;  
 }
 
 .footer-section-container {
@@ -219,3 +232,7 @@ footer {
   font-size: 18px;
 }
 
+p .parrafo
+{
+  font-family: 'STIX Two Text', sans-serif;
+}
