--- a/styles.css
+++ b/styles.css
@@ -187,6 +187,8 @@ form {
   padding: .25rem 0;
   margin-top: 5px;
   margin-bottom: 15px;
+  border-radius: 7px;
+  padding-left: 5px;
 }
 
 .input-field:focus {
@@ -204,6 +206,7 @@ form {
   cursor: pointer;
   transition: all 250ms;
   color: var(--primary-color-dark);
+  border-radius: 10px;
 }
 
 .btn-send-message:hover,
